src/test/deca/syntax/invalid/without_class/missing_semi.deca
// Description:
//    Program with missing ; at the eol
//
// Result:
//    Syntax Error
//    line 11


{
    int x = 2
}